доработка mindmap
